@@ -1,15 +1,20 @@
 package com.example.ecommerce.book_food.mapper;
 
 import com.example.ecommerce.book_food.dto.respone.FoodResponse;
+import com.example.ecommerce.book_food.dto.respone.OrderItemResponse;
 import com.example.ecommerce.book_food.dto.respone.OrderResponse;
+import com.example.ecommerce.book_food.dto.respone.UserResponse;
 import com.example.ecommerce.book_food.entity.Food;
 import com.example.ecommerce.book_food.entity.Order;
+import com.example.ecommerce.book_food.entity.OrderItem;
+import com.example.ecommerce.book_food.entity.User;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class OrderMapper {
@@ -22,25 +27,57 @@ public class OrderMapper {
         this.orderItemMapper = orderItemMapper;
         this.userMapper = userMapper;
     }
+    //ở đây sẽ ánh xạ thủ công, k sd modelmapper để tránh lỗi lazy ở orderitem và user
 
-    // map 1 Order sang OrderResponse
-    public OrderResponse toResponse(Order order) {
-        if (order == null) return null;
-        OrderResponse response = modelMapper.map(order, OrderResponse.class);
+    public OrderResponse convertToOrderResponse(Order order) {
+        // Chuyển đổi danh sách OrderItem thủ công
+        List<OrderItemResponse> itemResponses = order.getOrderItems().stream()
+                .map(this::convertToOrderItemResponse)
+                .collect(Collectors.toList());
 
-        //map các danh sách món ăn
-        response.setItems(orderItemMapper.toResponseList(order.getOrderItems()));
+        // Chuyển đổi User thủ công
+        UserResponse userResponse = convertToUserResponse(order.getUser());
 
-        // map thông tin user
-        response.setUser(userMapper.toResponse(order.getUser()));
-        return response;
+        return OrderResponse.builder()
+                .id(order.getId())
+                .orderNumber(order.getOrderNumber())
+                .status(order.getStatus())
+                .totalAmount(order.getTotalAmount())
+                .deliveryAddress(order.getDeliveryAddress())
+                .deliveryPhone(order.getDeliveryPhone())
+                .notes(order.getNotes())
+                .estimatedDeliveryTime(order.getEstimatedDeliveryTime())
+                .items(itemResponses)
+                .user(userResponse)
+                .createdAt(order.getCreatedAt())
+                .updatedAt(order.getUpdatedAt())
+                .build();
     }
 
-    // map list Order sang list OrderResponse
-    public List<OrderResponse> toResponseList(List<Order> orders) {
-        if (orders == null) return new ArrayList<>();
+    //chuyển đổi order sang orderResponse để tránh lỗi do Lazy gây ra
+    public List<OrderResponse> convertToOrderResponseList(List<Order> orders) {
         return orders.stream()
-                .map(this::toResponse)
-                .toList();
+                .map(this::convertToOrderResponse)
+                .collect(Collectors.toList());
+    }
+    //chuyển đổi orderitem sang orderitem respone
+    public OrderItemResponse convertToOrderItemResponse(OrderItem orderItem) {
+        return OrderItemResponse.builder()
+                .foodId(orderItem.getFood().getId())
+                .foodName(orderItem.getFood().getName())
+                .quantity(orderItem.getQuantity())
+                .price(orderItem.getUnitPrice())
+                .totalPrice(orderItem.getTotalPrice())
+                .build();
+    }
+
+    //chuyển đổi user sang userresponse
+    public UserResponse convertToUserResponse(User user) {
+        return UserResponse.builder()
+                .id(user.getId())
+                .username(user.getUsername())
+                .email(user.getEmail())
+                .fullName(user.getFullName())
+                .build();
     }
 }
